edited layout to have larger margin

--- a/main.css
+++ b/main.css
@@ -21,8 +21,9 @@ body {
 }
 
 #content {
-    margin-left: 100px;
-    margin-right: 100px;
+    margin-top: 40px;
+    margin-left: 175px;
+    margin-right: 175px;
     text-align: justify;
 }
 
